--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Write a story", new_post_path %></li>
           <% if user_signed_in? %>
-        <li><%= current_user.email %></li>
+            <li><%= current_user.email %></li>
+          <% else %>
+          <li><%= link_to "Sign in / Sign up", new_user_session_path %></li>
           <% end %>
       </ul>
   </div>
