--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,10 @@
 <h1>Edition du profil</h1>
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, html: { multipart: true }) do |f| %>
 
   <%= f.label :username %>
   <%= f.text_field :username %>
+  <%= f.file_field :avatar %>
 
   <%= f.submit "Editer" %>
 <% end %>
