--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,10 @@
 
   <%= f.label :username %>
   <%= f.text_field :username %>
+
+  <%= f.label :description %>
+  <%= f.text_field :description %>
+
   <%= f.file_field :avatar %>
 
   <%= f.submit "Editer" %>
