--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Profil de <%= @user.username %></h1>
 
-<%= image_tag @user.avatar.url(:thumb) if @user.avatar? %>
+<%= avatar_for(@user) %>
+
+<%= @user.description %>
 <%= link_to "Edition du profil", edit_user_path(@user) %>
