--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,4 +2,5 @@
   <%= avatar_for(post.user, size: 40) %>
   <%= post.username %>
   <h3><%= post.title %></h3>
+  <p><%= post.all_tags %></p>
 </div>
