react for searchbar & style searchbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,9 @@
   <div class="container-fluid">
     <a href="#" class="navbar-brand">MD</a>
       <ul class="nav navbar-nav navbar-right">
+        <li class="main-searchbar" id="main-searchbar">
+          <%= react_component('SearchBar', {}, { prerender: true }) %>
+        </li>
         <li class="new-story-button"><%= link_to "Write a story", new_post_path, class: "button" %></li>
           <% if user_signed_in? %>
             <li class="current-user-avatar"><%= link_to(avatar_for(current_user, size: 35), current_user) %></li>
