--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <a href="#" class="navbar-brand">MD</a>
       <ul class="nav navbar-nav navbar-right">
         <li class="main-searchbar" id="main-searchbar">
-          <%= react_component('SearchBar', {}, { prerender: true }) %>
+          <%= react_component('SearchContainer', {}, { prerender: true }) %>
         </li>
         <li class="new-story-button"><%= link_to "Write a story", new_post_path, class: "button" %></li>
           <% if user_signed_in? %>
